--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring:
-application:
-name: agentes
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring:
+#application:
+#name: agentes
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/agentes
 spring.datasource.data-username=root
 spring.datasource.data-password=admin
-spring.datasource.url=jdbc:mysql://192.168.20.109:3600/agentes?autoReconnect=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
