--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -1,8 +1,21 @@
-#spring:
-#application:
-#name: agentes
+server.port=8080
+
+################################################################
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/agentes
-spring.datasource.data-username=root
-spring.datasource.data-password=admin
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+# Configuracion para la base de eventos  con Mongo DB
+#
+################################################################
+spring.data.mongodb.database=agent_event
+spring.data.mongodb.host=192.168.20.109
+spring.data.mongodb.port=27017
+#spring.data.mongodb.repositories.type=auto
+
+
+axon.amqp.exchange=comisiones
+axon.amqp.routingkey=comisiones
+axon.amqp.queuename=comisiones
+
+spring.rabbitmq.host=192.168.20.135
+spring.rabbitmq.port=5673
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
