se agrega la persistencia de grupo empresarial y le agrega la relacion del usuario como administrador

--- a/cqrs/src/main/resources/application.properties
+++ b/cqrs/src/main/resources/application.properties
@@ -26,3 +26,11 @@ spring.rabbitmq.password=admin
 axon.amqp.exchange=comisiones-agente
 axon.amqp.routingkey=comisiones-agente
 axon.amqp.queuename=comisiones
+
+###
+## Configuracion de Eureka server
+##
+spring.application.name=cqrs-service
+eureka.instance.hostname=/swagger-ui.html
+eureka.instance.non-secure-port=8761
+eureka.server.my-url=http://localhost:8761
