--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 
 ################################################################
 #
@@ -11,11 +11,20 @@ spring.data.mongodb.port=27017
 #spring.data.mongodb.repositories.type=auto
 
 
-axon.amqp.exchange=comisiones
-axon.amqp.routingkey=comisiones
+axon.amqp.exchange=agente_usuario
+axon.amqp.routingkey=agente_usuario
 axon.amqp.queuename=comisiones
 
-spring.rabbitmq.host=192.168.20.135
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5673
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
+
+
+###
+## Configuracion de Eureka server
+##
+spring.application.name=agente-service
+#eureka.instance.hostname=/swagger-ui.html
+eureka.instance.non-secure-port=8761
+eureka.server.my-url=http://localhost:8761
