--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8081
 # Configuracion para la base de eventos  con Mongo DB
 #
 ################################################################
-spring.data.mongodb.database=agent_event
-spring.data.mongodb.host=192.168.20.109
+spring.data.mongodb.database=events
+spring.data.mongodb.host=192.168.1.66
 spring.data.mongodb.port=27017
 #spring.data.mongodb.repositories.type=auto
 
@@ -15,7 +15,12 @@ axon.amqp.exchange=agente_usuario
 axon.amqp.routingkey=agente_usuario
 axon.amqp.queuename=comisiones
 
-spring.rabbitmq.host=localhost
+axon.amqp.exchange-cqrs=usuarioCQRS
+axon.amqp.routingkey-cqrs=usuarioCQRS
+axon.amqp.queuename-cqrs=cqrs
+
+
+spring.rabbitmq.host=192.168.1.66
 spring.rabbitmq.port=5673
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
@@ -27,4 +32,4 @@ spring.rabbitmq.password=admin
 spring.application.name=agente-service
 #eureka.instance.hostname=/swagger-ui.html
 eureka.instance.non-secure-port=8761
-eureka.server.my-url=http://localhost:8761
+eureka.server.my-url=http://192.168.1.66:8761
