se agregan cambios para enviar y recibir mensaje del rabbitMQ

--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -3,24 +3,40 @@ server.port=8081
 ################################################################
 #
 # Configuracion para la base de eventos  con Mongo DB
+# TODO: Se comenta por que los eventos se van a guardar en un mysql
 #
 ################################################################
-spring.data.mongodb.database=events
-spring.data.mongodb.host=192.168.1.66
-spring.data.mongodb.port=27017
+#spring.data.mongodb.database=agent_event
+#spring.data.mongodb.host=192.168.20.109
+#spring.data.mongodb.port=27017
 #spring.data.mongodb.repositories.type=auto
+
+#Se utiliza para que creee las tablas que necesita el axon para los eventos en mongo no se necesita por que mongo crea las tablas al vuelo si no existe
+# MySQL
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3600/agentes
+spring.datasource.username=root
+spring.datasource.password=admin
 
 
 axon.amqp.exchange=agente_usuario
 axon.amqp.routingkey=agente_usuario
 axon.amqp.queuename=comisiones
 
-axon.amqp.exchange-cqrs=usuarioCQRS
-axon.amqp.routingkey-cqrs=usuarioCQRS
-axon.amqp.queuename-cqrs=cqrs
+axon.amqp.exchange.cqrs=usuarioCQRS
+axon.amqp.routingkey.cqrs=usuarioCQRS
+axon.amqp.queuename.cqrs=cqrs
+
+axon.amqp.exchange.grupo=grupo_empresarial_events_test
+axon.amqp.routingkey.grupo=grupo_empresarial_events_test
+axon.amqp.queuename.grupo=grupo_empresarial_events_test
 
 
-spring.rabbitmq.host=192.168.1.66
+spring.rabbitmq.host=192.168.20.135
+#spring.rabbitmq.host=192.168.20.109
 spring.rabbitmq.port=5673
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
@@ -32,4 +48,4 @@ spring.rabbitmq.password=admin
 spring.application.name=agente-service
 #eureka.instance.hostname=/swagger-ui.html
 eureka.instance.non-secure-port=8761
-eureka.server.my-url=http://192.168.1.66:8761
+eureka.server.my-url=http://192.168.20.109:8761
