--- a/cqrs/src/main/resources/application.properties
+++ b/cqrs/src/main/resources/application.properties
@@ -10,14 +10,24 @@ spring.data.neo4j.password=admin
 # Configuracion para la base de eventos  con Mongo DB
 #
 ################################################################
-spring.data.mongodb.database=agent_event
-spring.data.mongodb.host=192.168.20.109
-spring.data.mongodb.port=27017
+#spring.data.mongodb.database=cqrs_event
+#spring.data.mongodb.host=192.168.20.109
+#spring.data.mongodb.port=27017
+
+######
+####Configuracion mysql para eventos
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.datasource.url=jdbc:mysql://localhost:3600/cqrs_events
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ###
 ### Configuracion para conectar con RabbitMQ
 ###
-spring.rabbitmq.host=192.168.20.109
+spring.rabbitmq.host=192.168.20.135
 spring.rabbitmq.port=5673
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
