se modifica el aggregate para solamente persistir una ves

--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.port=8081
 
 #Se utiliza para que creee las tablas que necesita el axon para los eventos en mongo no se necesita por que mongo crea las tablas al vuelo si no existe
 # MySQL
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 #spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
@@ -35,8 +35,8 @@ axon.amqp.routingkey.grupo=grupo_empresarial_events_test
 axon.amqp.queuename.grupo=grupo_empresarial_events_test
 
 
-spring.rabbitmq.host=192.168.20.135
-#spring.rabbitmq.host=192.168.20.109
+#spring.rabbitmq.host=192.168.20.135
+spring.rabbitmq.host=192.168.20.109
 spring.rabbitmq.port=5673
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
