--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -13,11 +13,11 @@ server.port=8081
 
 #Se utiliza para que creee las tablas que necesita el axon para los eventos en mongo no se necesita por que mongo crea las tablas al vuelo si no existe
 # MySQL
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 #spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3600/agentes
+spring.datasource.url=jdbc:mysql://localhost:3600/compania
 spring.datasource.username=root
 spring.datasource.password=admin
 
