se mofifica el nombre del service de agente a compañia

--- a/cqrs/src/main/resources/application.properties
+++ b/cqrs/src/main/resources/application.properties
@@ -2,9 +2,7 @@
 ### DataSource de Neo4j para guardar los datos de los modelos y agggregados
 ###
 spring.data.neo4j.uri=bolt://192.168.20.109
-spring.data.neo4j.username=neo4j
-spring.data.neo4j.password=admin
-
+spring.data.neo4j.username=neo4jspring.data.neo4j.password=admin
 ################################################################
 #
 # Configuracion para la base de eventos  con Mongo DB
@@ -41,6 +39,6 @@ axon.amqp.queuename=comisiones
 ## Configuracion de Eureka server
 ##
 spring.application.name=cqrs-service
-eureka.instance.hostname=/swagger-ui.html
+#eureka.instance.hostname=/swagger-ui.html
 eureka.instance.non-secure-port=8761
-eureka.server.my-url=http://localhost:8761
+eureka.server.my-url=http://192.168.20.109:8761
