--- a/agentes/pom.xml
+++ b/agentes/pom.xml
@@ -41,6 +41,13 @@
             <version>2.1.0.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-hystrix -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.1.1.RELEASE</version>
+        </dependency>
+
 
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
