se suben la integaracion de con actuator para que funcione hystrix como circuit breaker

--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+spring.application.name=agente-service
 server.port=8081
-
+management.endpoints.web.exposure.include= hystrix.stream, info, health
 ################################################################
 #
 # Configuracion para la base de eventos  con Mongo DB
@@ -45,7 +46,10 @@ spring.rabbitmq.password=admin
 ###
 ## Configuracion de Eureka server
 ##
-spring.application.name=agente-service
+
 #eureka.instance.hostname=/swagger-ui.html
 eureka.instance.non-secure-port=8761
-eureka.server.my-url=http://192.168.20.109:8761
+eureka.client.serviceUrl.defaultZone=http://192.168.20.109:8761/eureka
+eureka.client.healthcheck.enabled=true
+eureka.instance.lease-expiration-duration-in-seconds=5
+eureka.instance.lease-renewal-interval-in-seconds=1
