--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -5,4 +5,5 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.instance.non-secure-port-enabled=true
 eureka.server.my-url=http://192.168.20.109:8761
+eureka.server.wait-time-in-ms-when-sync-empty=0
 
