--- a/agentes/pom.xml
+++ b/agentes/pom.xml
@@ -54,10 +54,10 @@
         </dependency>
 
 
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-data-mongodb</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 
 
         <dependency>
@@ -109,11 +109,11 @@
             <version>3.2</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.axonframework</groupId>-->
-            <!--<artifactId>axon-mongo</artifactId>-->
-            <!--<version>3.2</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-mongo</artifactId>
+            <version>3.2</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
