--- a/agentes/src/main/resources/application.properties
+++ b/agentes/src/main/resources/application.properties
@@ -1,26 +1,29 @@
 spring.application.name=agente-service
 server.port=8081
 management.endpoints.web.exposure.include= hystrix.stream, info, health
-################################################################
-#
-# Configuracion para la base de eventos  con Mongo DB
-# TODO: Se comenta por que los eventos se van a guardar en un mysql
-#
-################################################################
-#spring.data.mongodb.database=agent_event
-#spring.data.mongodb.host=192.168.20.109
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.repositories.type=auto
+###############################
 
 #Se utiliza para que creee las tablas que necesita el axon para los eventos en mongo no se necesita por que mongo crea las tablas al vuelo si no existe
 # MySQL
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 #spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3600/compania
 spring.datasource.username=root
 spring.datasource.password=admin
+
+
+################################################################
+#
+# Configuracion para la base de eventos  con Mongo DB
+#
+################################################################
+spring.data.mongodb.database=events
+spring.data.mongodb.host=192.168.20.109
+spring.data.mongodb.port=27017
+#spring.data.mongodb.repositories.type=auto
 
 
 axon.amqp.exchange=agente_usuario
@@ -48,8 +51,9 @@ spring.rabbitmq.password=admin
 ##
 
 #eureka.instance.hostname=/swagger-ui.html
-eureka.instance.non-secure-port=8761
+#eureka.instance.non-secure-port=8761
 eureka.client.serviceUrl.defaultZone=http://192.168.20.109:8761/eureka
 eureka.client.healthcheck.enabled=true
+eureka.client.register-with-eureka=true
 eureka.instance.lease-expiration-duration-in-seconds=5
 eureka.instance.lease-renewal-interval-in-seconds=1
