--- a/facultamiento/src/main/resources/application.properties
+++ b/facultamiento/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8082
 
 #spring.data.neo4j.uri: bolt://192.168.20.109
-spring.data.neo4j.uri: bolt://192.168.20.143
+spring.data.neo4j.uri: bolt://192.168.20.84
 spring.data.neo4j.username: neo4j
-spring.data.neo4j.password: admin
+spring.data.neo4j.password: neo4j
 
 
 # RabbitMQ properties
@@ -14,14 +14,13 @@ spring.rabbitmq.password=admin
 
 axon.amqp.exchange=facultades
 
-#spring.data.mongodb.uri=mongodb://190.160.20.109:27017/agent_event
-#spring.data.mongodb.database=permiso_event
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+spring.data.mongodb.database=events
+spring.data.mongodb.host=192.168.20.109
+spring.data.mongodb.port=27017
 #spring.data.mongodb.repositories.type=auto
 
 # MySQL
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 #spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
