cqrs-service: se agregan validaciones para que no se repitan los objetos

--- a/cqrs/src/main/resources/application.properties
+++ b/cqrs/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 ### DataSource de Neo4j para guardar los datos de los modelos y agggregados
 ###
 spring.data.neo4j.uri=bolt://192.168.20.109
-spring.data.neo4j.username=neo4jspring.data.neo4j.password=admin
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=admin
 ################################################################
 #
 # Configuracion para la base de eventos  con Mongo DB
@@ -15,12 +16,12 @@ spring.data.neo4j.username=neo4jspring.data.neo4j.password=admin
 ######
 ####Configuracion mysql para eventos
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
-spring.datasource.url=jdbc:mysql://localhost:3600/cqrs_events
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3600/cqrs_events
+#spring.datasource.username=root
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ###
 ### Configuracion para conectar con RabbitMQ
